--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:gravity="center_vertical"
+              android:orientation="horizontal">
+
+    <zw.com.circlemenu.CircleMenuLayout
+        android:id="@+id/menu_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="100dp">
+
+        <RelativeLayout
+            android:id="@+id/id_circle_menu_item_center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="104dp"
+                android:layout_height="104dp"
+                android:layout_centerInParent="true"
+                />
+            <ImageView
+                android:layout_width="116dp"
+                android:layout_height="116dp"
+                android:layout_centerInParent="true"
+                />
+        </RelativeLayout>
+    </zw.com.circlemenu.CircleMenuLayout>
+
 
 </LinearLayout>
