初步调整完

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,27 +9,9 @@
     <zw.com.circlemenu.view.CircleMenuLayout
         android:id="@+id/menu_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/circle_bg3"
-        android:padding="100dp">
+        android:layout_height="wrap_content"
+        android:background="@drawable/gd">
 
-        <RelativeLayout
-            android:id="@id/id_circle_menu_item_center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_width="104.0dip"
-                android:layout_height="104.0dip"
-                android:layout_centerInParent="true"
-                android:background="@drawable/turnplate_center_unlogin"/>
-
-            <ImageView
-                android:layout_width="116.0dip"
-                android:layout_height="116.0dip"
-                android:layout_centerInParent="true"
-                android:background="@drawable/turnplate_mask_unlogin_normal"/>
-        </RelativeLayout>
     </zw.com.circlemenu.view.CircleMenuLayout>
 
 
